# excel-plugin-api-poc

./: main.py  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: master_testapinrp.yml
database/: dbc.py
endpoints/: rainfallstations.py  weatherdata.py
logging_utils/: logger.py
