
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Prateek Katam", email = "pkatam@northrop.com.au"},
]
dependencies = [
    "fastapi>=0.97.0",
    "uvicorn[standard]>=0.22.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "uvicorn main:app --reload"
