
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Prateek Katam", email = "pkatam@northrop.com.au"},
]
dependencies = [
    "fastapi>=0.97.0",
    "uvicorn[standard]>=0.22.0",
    "sqlalchemy>=2.0.16",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.scripts]
start_dev = "uvicorn main:app --reload"
start_prod = "uvicorn main:app --host 0.0.0.0 --port 80"
